0 - Remove "com.google.guava" dependency, one dependency is left in MapTaskHandlerAdapter